# devops

./: .gitignore  README.md
bootstrap/: Makefile  bootstrap.bat  bootstrap.ps1  bootstrap.sh  delete.bat  delete.sh
bootstrap/scripts/: config.py  delete.py  identity.py  output.py  wizard.py
lib-extras/lib-platform/: pom.xml
platform/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  env.example  platform.bat  platform.ps1  platform.sh  platform.yaml
platform/dashboard/: README.md
platform/docs/: OPERATIONS.md  access-rights.md  devops-guide.html  devops-pipeline-architecture.md  devops-platform-summary.md  poc-environments.md  service-hooks.md
platform/scripts/: cleanup.py  cluster_manager.py  compat.py  config.py  deployer.py  drift_checker.py  env_manager.py  history.py  identity.py  migrate_envs.py  output.py  platform_cli.py  release_notes.py  requirements.txt  service_creator.py  status_checker.py  template_manager.py  validate_version.py
platform/templates/python-api/src/: Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  service-manifest.yaml
platform/templates/python-api/src/helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
platform/templates/python-api/src/helm/templates/: deployment.yaml  service.yaml
testenv/: .gitignore  bootstrap-config.yaml  create.ps1  create.sh  delete.ps1  delete.sh  docker-compose.yml  start.ps1  start.sh  stop.ps1  stop.sh
testenv/jenkins/: Dockerfile  maven-settings.xml  plugins.txt
testenv/k8s/: jenkins-sa.yaml  maven-settings-configmap.yaml  (+1 more)
(+75 files in other folders)
